# end_to_end_mlops_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  setup.py  template.py
.github/workflows/: main.yaml
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml
research/: 01_data_ingetion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  test.py
src/mlProject/: __init__.py
src/mlProject/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlProject/config/: configuration.py
src/mlProject/entity/: config_entity.py
src/mlProject/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/mlProject/utils/: common.py
templates/: results.html
