[tool.poetry]
name = "end-to-end-mlops-project"
version = "0.1.0"
description = ""
authors = ["Artem Strashko <artem.strashko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
mlflow = "^2.17.0"
notebook = "^7.2.2"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
python-box = "^7.2.0"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
ensure = "^1.0.4"
joblib = "^1.4.2"
types-pyyaml = "^6.0.12.20240917"
flask = "^3.0.3"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "mlProject"
from = "src"